fixed center align issue and AI desc

--- a/components/Showcase/ShowComp/AutoEmail/AutoEmail.module.scss
+++ b/components/Showcase/ShowComp/AutoEmail/AutoEmail.module.scss
@@ -2,4 +2,5 @@
 
 .AutoEmail {
   @include showScreenCenter();
+  padding: 10%;
 }
