--- a/components/Showcase/ShowComp/PDFChat/PdfChat.module.scss
+++ b/components/Showcase/ShowComp/PDFChat/PdfChat.module.scss
@@ -2,4 +2,5 @@
 
 .PDFChat {
   @include showScreenCenter();
+  padding: 10%;
 }
